style/base.css
/* ... */
.copy-icon svg {
  width: 12px;
  height: 12px;
}

.claude-icon svg {
  width: 16px;
  height: 16px;
  color: #d97757;
}

.send-button {
  display: flex;
  align-items: center;
  cursor: pointer;
  gap: 5px;
  border: 1px solid var(--jp-border-color1);
}

.send-button:hover:enabled {
  background-color: var(--jp-layout-color1);
}

.send-button svg {
  width: 18px;
  height: 18px;
}

button.send-button {
  padding: 4px;
  width: 24px;
  height: 24px;
}

.inline-popover {
  width: calc(100% - 6px);
  height: calc(100% - 6px);
  display: flex;
  flex-direction: column;
  position: absolute;
  background-color: #f2f3ff;
}

body[data-jp-theme-light='false'] .inline-popover {
  background-color: #14162b;
}

.inline-prompt-container {
  width: 100%;
  height: 100%;
  padding: 2px;
}

.monaco-editor-container {
  width: 100%;
  flex-grow: 1;
  border: 1px solid var(--jp-border-color2);
  border-left: none;
  border-right: none;
}

.inline-popover-footer {
  height: 32px;
  width: calc(100% - 6px);
  display: flex;
  flex-direction: row;
  gap: 5px;
  align-items: center;
  padding-left: 5px;
  background-color: var(--jp-layout-color2);
}

.inline-prompt-container textarea {
  width: calc(100% - 2px);
  height: calc(100% - 2px);
  font-family: var(--jp-ui-font-family);
  color: var(--jp-ui-font-color1);
  resize: none;
  background: none;
  outline: none;
  border: none;
}

.inline-popover-footer .jp-Button {
  height: 24px;
  padding: 4px;
}

.github-copilot-status-bar {
  color: var(--jp-inverse-layout-color2);
}

.github-copilot-status-bar svg {
  margin-top: 4px;
}

.github-copilot-login-dialog {
  display: flex;
  flex-direction: column;
  gap: 10px;
  padding: 10px;
  width: 500px;
  line-height: 20px;
}

.github-copilot-login-status-text.logged-in {
  color: var(--jp-brand-color1);
}

.config-dialog {
  display: flex;
  flex-direction: column;
  width: 500px;
  height: 100%;
}

.config-dialog-container .jp-Dialog-content {
  max-height: 600px;
}

.config-dialog-container .jp-Dialog-footer {
  display: none;
}

.config-dialog-body {
  display: flex;
  flex-direction: column;
  overflow-y: auto;
  gap: 15px;
}

.model-config-section-row {
  display: flex;
  flex-direction: row;
  gap: 10px;
}

.model-config-section-column {
  display: flex;
  flex-direction: column;
  gap: 10px;
  flex: 1 1 0px;
}

.config-dialog-footer {
  height: 32px;
  display: flex;
  margin-top: 10px;
}

.config-dialog-body select.jp-mod-styled {
  appearance: auto;
}

.config-dialog-body input.jp-mod-styled {
  width: 100%;
}

.model-config-section {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.form-field-row {
  padding-left: 15px;
}

.form-field-description {
  color: var(--jp-ui-font-color2);
  margin-bottom: 5px;
}

.model-config-section-header {
  font-weight: bold;
  font-size: 15px;
}

.model-config-section-body {
  padding-left: 10px;
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.inline-prompt-widget {
  border-radius: 4px;
  padding: 3px;
  z-index: 1000;
  box-shadow: rgba(90 76 191 / 30%) 0 0 10px 10px;
}

.inline-prompt-widget::before {
  border-radius: 4px;
  content: '';
  background-image: conic-gradient(
    from 270deg at 50% 50%,
    #3b37ff 0deg,
    #096bde 160deg,
    #f1259c 175deg,
    #7c3ffe 200deg,
    #7c3ffe 350deg,
    #3b37ff 360deg
  );
  /* stylelint-disable */
  left: -1px;
  right: -1px;
  top: -1px;
  bottom: -1px;
  /* stylelint-enable */
  position: absolute;
  z-index: -1;
}

/* stylelint-disable */
.jp-InputArea-editor.generating {
  background:
    linear-gradient(
        var(--jp-cell-editor-active-background),
        var(--jp-cell-editor-active-background)
      )
      padding-box,
    linear-gradient(var(--angle), #f1259c, #687aff) border-box;
  animation: 4s rotate-gen linear infinite;
  border: 2px solid #0000 !important;
}

@keyframes rotate-gen {
  to {
    --angle: 360deg;
  }
}

@property --angle {
  syntax: '<angle>';
  initial-value: 0deg;
  inherits: false;
}
/* stylelint-enable */

.ollama-warning-message {
  color: var(--jp-warn-color0);
  line-height: 20px;
}

.expandable-content-title {
  margin-top: 5px;
  margin-bottom: 5px;
  display: flex;
  align-items: center;
  gap: 5px;
  cursor: pointer;
  color: var(--jp-ui-font-color2);
}

.expandable-content-text {
  display: none;
  margin: 5px;
  padding: 0 5px;
  border: 1px solid var(--jp-border-color2);
  border-radius: 5px;
  max-height: 200px;
  overflow-y: auto;
  box-shadow: inset 0 0 15px 15px rgb(23 23 23 / 50%);
}

.expandable-content .collapsed-icon {
  display: inline;
}

.expandable-content .expanded-icon {
  display: none;
}

.expandable-content.expanded .expanded-icon {
  display: inline;
}

.expandable-content.expanded .expandable-content-text {
  display: block;
}

.expandable-content.expanded .collapsed-icon {
  display: none;
}

.access-token-config-header {
  display: flex;
  align-items: center;
  gap: 10px;
}

svg.access-token-warning {
  color: var(--jp-warn-color0);
  width: 18px;
  height: 18px;
}

.checkbox-item {
  display: flex;
  flex-direction: column;
  cursor: pointer;
}

.checkbox-item:hover {
  background-color: var(--jp-layout-color1);
}

.checkbox-item-indent-0 {
  padding-left: 0;
}

.checkbox-item-indent-1 {
  padding-left: 12px;
}

.checkbox-item-indent-2 {
  padding-left: 24px;
}

.checkbox-item-indent-3 {
  padding-left: 36px;
}

.checkbox-icon {
  flex: 0 0 16px;
  width: 16px;
  height: 16px;
  color: var(--jp-brand-color1);
  padding-top: 1px;
}

.checkbox-item-toggle {
  display: flex;
  align-items: center;
  gap: 5px;
  margin: 0 2px;
  padding: 3px 2px;
  color: var(--jp-ui-font-color1);
}

.checkbox-item-toggle span {
  min-width: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.checkbox-item-header .checkbox-item-toggle {
  color: var(--jp-ui-font-color0);
  font-weight: bold;
}

.mode-tools-group-built-in {
  flex-flow: row wrap;
}

.mode-tools-group-built-in .checkbox-item {
  width: 50%;
}
/* ... */

